get review_id
